<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="LoginViewModel"
            type="com.example.furniture.loginActivity.viewModel.LoginViewModel" />
        
        
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:theme="@style/ToolbarTheme"
                app:title="@string/signIn">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/sello"
            android:textStyle="bold"
            tools:ignore="RtlCompat"
            android:textColor="@android:color/black"
            app:drawableEndCompat="@drawable/ic_baseline_search_24" />


        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:layout_margin="30dp"
            android:textAlignment="viewStart"
            android:hint="@string/mobileNumber"
            android:maxLength="10"
            android:visibility="@{LoginViewModel.numberEt}"
            style="@style/Widget.AppCompat.EditText"
            android:text="@={LoginViewModel.number}"
            tools:ignore="RtlCompat" />


        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:layout_margin="30dp"
            android:hint="@string/enterOTP"
            android:textAlignment="viewStart"
            android:maxLength="10"
            style="@style/Widget.AppCompat.EditText"
            android:visibility="@{LoginViewModel.otpEt}"
            android:text="@={LoginViewModel.otp}"
            tools:ignore="RtlCompat" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getOtp"
            android:textAllCaps="false"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_marginTop="20dp"
            android:visibility="@{LoginViewModel.numberBtn}"
            android:onClick="@{() -> LoginViewModel.OnClickSendOTP()}"
            />



        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifedOtp"
            android:textAllCaps="false"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_marginTop="20dp"
            android:visibility="@{LoginViewModel.otpBtn}"
            android:onClick="@{(v) ->  LoginViewModel.OnClickOTPVerifed(v)}"

            />



    </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>