<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="AddFurnitureViewModel"
            type="com.example.furniture.addFurniture.viewModel.AddFurnitureViewModel" />


    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            >


            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimary"
                    android:theme="@style/ToolbarTheme"
                    android:onClick="@{(v) -> AddFurnitureViewModel.OnClickBack(v)}"
                    app:navigationIcon="@drawable/ic_left_arrow_white"

                    app:title="@string/newOffer"
                    tools:ignore="OnClick">
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>


            <ImageView
                android:id="@+id/productImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_add_a_photo_24"
                android:background="@color/backgroundGray"
                />


            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/productName"
                android:paddingLeft="15dp"
                android:text="@={AddFurnitureViewModel.productName}"
                android:paddingStart="15dp"
                tools:ignore="RtlSymmetry" />


            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:theme="@style/SpinnerTheme"
                android:entries="@array/item_list"
                android:onItemSelected="@{(parent,view,pos,id)->AddFurnitureViewModel.onSelectItem(parent,view,pos,id)}"

                />




            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="10dp"
                android:hint="@string/price"
                android:paddingLeft="15dp"
                android:inputType="number"
                android:paddingStart="15dp"
                android:text="@={AddFurnitureViewModel.productPrice}"
                tools:ignore="RtlSymmetry" />




            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/discountPrice"
                android:paddingLeft="15dp"
                android:inputType="number"
                android:paddingStart="15dp"
                android:text="@={AddFurnitureViewModel.productPriceDiscount}"
                tools:ignore="RtlSymmetry" />



            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                >

              <androidx.appcompat.widget.AppCompatButton
                  android:layout_width="wrap_content"
                  android:layout_height="50dp"

                  android:text="@string/back"

                  android:background="@color/gray"
                  android:onClick="@{(v) -> AddFurnitureViewModel.OnClickBack(v)}"

                  />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"
                    android:layout_marginLeft="10dp"


                    android:onClick="@{(v) -> AddFurnitureViewModel.OnClickSave(v)}"
                    />



            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>